# greendots

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
greendots-frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
greendots-frontend/src/: App.vue
greendots-frontend/src/assets/: base.css
greendots-frontend/src/components/: ProjectCard.vue  ProjectRuns.vue  ProjectsGrid.vue
greendots-frontend/src/controllers/: TestDataController.ts  confetti.ts  liqe2js.ts  memoPromise.ts  notifications.ts  resizer.ts  statusUpdateReducer.ts
greendots-frontend/src/router/: index.ts
greendots-frontend/src/utils/: str_hash.ts
greendots-frontend/src/utils/confetti/: ConfettiShape.ts  JSConfetti.ts  normalizeConfettiConfig.ts  types.ts
greendots-frontend/src/utils/liqe-vendored/: Liqe.ts
greendots-frontend/src/views/: HomeView.vue  NotFoundView.vue  ProjectRunsView.vue  TestLogsView.vue  TestResultsView.vue
greendots-server/: .gitignore  api-docs.txt  config.toml  copy_frontend_dist.sh  gen_commit_info.sh  gen_logs_view.sh  go.mod  go.sum  logs_view.html  main.go  tail_logs_view_prefix.html
greendots_plugin/: plugin.py
